fixed the dropdown shifting

--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -114,7 +114,7 @@
 }
 
 .SBDropDown{
-    /* position: absolute; */
+    position: absolute;
     display:flex;
     align-items: center;
     color: white;
